--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,9 +1,10 @@
-asgiref==3.5.0
+asgiref==3.5.2
 certifi==2021.10.8
 charset-normalizer==2.0.10
-Django==4.0.3
+Django==4.0.5
 idna==3.3
+Pillow==9.1.1
 requests==2.27.1
 sqlparse==0.4.2
-tzdata==2021.5
+tzdata==2022.1
 urllib3==1.26.8
