[UPDATE]  Implementando datatables
Se agrega librerias de datatable

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-/app/app/__pycache__
 env/*
 app/core/erp/__pycache__/*
-app/core/erp/migrations/__pycache__/*
-app/core/erp/views/category/__pycache__/*
+*.pyc
