--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 certifi==2021.10.8
 charset-normalizer==2.0.10
 Django==4.0.5
+django-widget-tweaks==1.4.12
 idna==3.3
 Pillow==9.1.1
 requests==2.27.1
